# ZAAMPv2

./: .gitignore  CMakeLists.txt  README.md
config/: config.xml
serwer-z-tlem-Qt6/: .qglviewer.xml
serwer-z-tlem-Qt6/libQGLViewer/: Makefile
serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/: Makefile  libQGLViewer-qt6.prl
serwer-z-tlem-Qt6/libQGLViewer/examples/: Makefile
serwer-z-tlem-Qt6/libQGLViewer/examples/animation/: Makefile  animation
serwer-z-tlem-Qt6/libQGLViewer/examples/callback/: Makefile  callback
serwer-z-tlem-Qt6/libQGLViewer/examples/cameraLight/: Makefile  cameraLight
serwer-z-tlem-Qt6/libQGLViewer/examples/clippingPlane/: Makefile  clippingPlane
serwer-z-tlem-Qt6/libQGLViewer/examples/constrainedCamera/: Makefile  constrainedCamera
serwer-z-tlem-Qt6/libQGLViewer/examples/constrainedFrame/: Makefile  constrainedFrame
serwer-z-tlem-Qt6/libQGLViewer/examples/drawLight/: Makefile  drawLight
serwer-z-tlem-Qt6/libQGLViewer/examples/fastDraw/: Makefile  fastDraw
serwer-z-tlem-Qt6/libQGLViewer/examples/frameTransform/: Makefile  frameTransform
serwer-z-tlem-Qt6/libQGLViewer/examples/frustumCulling/: Makefile  frustumCulling
serwer-z-tlem-Qt6/libQGLViewer/examples/interface/: Makefile  interface
serwer-z-tlem-Qt6/libQGLViewer/examples/keyFrames/: Makefile  keyFrames
serwer-z-tlem-Qt6/libQGLViewer/examples/keyboardAndMouse/: Makefile  keyboardAndMouse
serwer-z-tlem-Qt6/libQGLViewer/examples/luxo/: Makefile  luxo
serwer-z-tlem-Qt6/libQGLViewer/examples/manipulatedFrame/: Makefile  manipulatedFrame
serwer-z-tlem-Qt6/serwer_zrodla/: Makefile.app
zalazek/: CMakeLists.txt  Makefile  commands  commands.cmd  commands2  commands2.cmd  configuration.xml  interp  main.txt
zalazek-xmlinterp4config-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
zalazek-xmlinterp4config-cmake/config/: config.xml
zalazek-xmlinterp4config-cmake/doc/html/: 001-podstrona_8page_source.html  Configuration_8hh_source.html  annotated.html  annotated_dup.js  classConfiguration.html  classXMLInterp4Config.html  classXMLInterp4Config.js  classXMLInterp4Config__coll__graph.map  classXMLInterp4Config__inherit__graph.md5  classXMLInterp4Config_a5588af2dc423d361e688cbad0a3da877_cgraph.map  classXMLInterp4Config_a5588af2dc423d361e688cbad0a3da877_cgraph.md5  classXMLInterp4Config_a5e3c76e68652f288d9bad7ce55493253_cgraph.map  classXMLInterp4Config_a5e3c76e68652f288d9bad7ce55493253_cgraph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_739e4c90a6ad3ea516204f5ff825abb2.html  dir_739e4c90a6ad3ea516204f5ff825abb2.js  dir_739e4c90a6ad3ea516204f5ff825abb2_dep.map  dir_739e4c90a6ad3ea516204f5ff825abb2_dep.md5  dir_75a9b3ef857d8d7b3c202d54f460dc2d.html  dir_75a9b3ef857d8d7b3c202d54f460dc2d.js  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.html  graph_legend.md5  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  main_8cpp_source.html  main_8page_source.html  (+5 more)
zalazek/dox/doc/html/: AbstractComChannel_8hh.html  AbstractComChannel_8hh.js  AbstractComChannel_8hh__dep__incl.map  AbstractComChannel_8hh__dep__incl.md5  AbstractComChannel_8hh__incl.map  AbstractComChannel_8hh__incl.md5  AbstractComChannel_8hh_source.html  AbstractInterp4Command_8hh.html  AbstractInterp4Command_8hh.js  AbstractInterp4Command_8hh__dep__incl.map  AbstractInterp4Command_8hh__dep__incl.md5  AbstractInterp4Command_8hh__incl.map  AbstractInterp4Command_8hh__incl.md5  AbstractInterp4Command_8hh_source.html  AbstractMobileObj_8hh.html  AbstractMobileObj_8hh.js  AbstractMobileObj_8hh__dep__incl.map  AbstractMobileObj_8hh__dep__incl.md5  AbstractMobileObj_8hh__incl.map  AbstractMobileObj_8hh__incl.md5  AbstractMobileObj_8hh_source.html  AbstractScene_8hh.html  AbstractScene_8hh.js  AbstractScene_8hh__dep__incl.map  AbstractScene_8hh__dep__incl.md5  AbstractScene_8hh__incl.map  AbstractScene_8hh__incl.md5  AbstractScene_8hh_source.html  Interp4Move_8cpp.html  Interp4Move_8cpp.js  Interp4Move_8cpp__incl.map  Interp4Move_8cpp__incl.md5  Interp4Move_8cpp_a166726d428619d4f4a60b1cc73f15681_cgraph.map  Interp4Move_8cpp_a166726d428619d4f4a60b1cc73f15681_cgraph.md5  Interp4Move_8cpp_source.html  Interp4Move_8hh.html  Interp4Move_8hh.js  Interp4Move_8hh__dep__incl.map  Interp4Move_8hh__dep__incl.md5  Interp4Move_8hh__incl.map  (+136 more)
zalazek/inc/: AbstractComChannel.hh  AbstractMobileObj.hh  ComChannel.hh  CommandNames.hh  Configuration.hh  GeomObject.hh  GeomVector.hh  MobileObj.hh  Scene.hh  Sender.hh  StateNumber.hh  Vector3D.hh  xmlinterp.hh
zalazek/plugin/: CMakeLists.txt  Makefile
zalazek/plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
zalazek/plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
zalazek/src/: ComChannel.cpp  MobileObj.cpp  Scene.cpp  Sender.cpp  XMLInterp4Config.cpp  main.cpp  xmlinterp.cpp
(+18 files in other folders)
